--- a/dist.ini
+++ b/dist.ini
@@ -24,7 +24,6 @@ exclude_filename = cpanfile
 [@Filter]
 -bundle = @Basic
 -remove = GatherDir
--remove = UploadToCPAN
 
 [AutoPrereqs]
 [Prereqs]
@@ -42,7 +41,7 @@ Test::Mojo = 0
 [NoTabsTests]
 [CheckChangeLog]
 [Test::MinimumVersion]
-[Test::Synopsis]
+;[Test::Synopsis]
 [ReadmeAnyFromPod]
 
 [CopyFilesFromBuild]
@@ -51,5 +50,5 @@ copy = Makefile.PL
 copy = META.yml
 copy = cpanfile
 
-[FakeRelease]
+;[FakeRelease]
 
